scripts/scheduler/01_scheduler_nodename.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sched-nodename
spec:
  containers:
  - image: harbor.kubemsb.com/library/nginx-web:0.1
    name: c
  nodeName: worker1
