scripts/scheduler/02_scheduler_nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sched-node-selector
spec:
  containers:
  - image: harbor.kubemsb.com/library/nginx-web:0.1
    name: c
  nodeSelector:
    kubernetes.io/hostname: worker2
