scripts/scheduler/03_scheduler_affinity_prefered.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sched-node-affinity-prefered
spec:
  containers:
  - image: harbor.kubemsb.com/library/nginx-web:0.1
    name: c
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 50
        preference:
          matchExpressions:
          - key: env
            operator: In
            values:
            - test
      - weight: 20
        preference:
          matchExpressions:
          - key: env
            operator: In
            values:
            - dev
