scripts/scheduler/04_scheduler_affinity_required.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sched-node-affinity-required
spec:
  containers:
  - image: harbor.kubemsb.com/library/nginx-web:0.1
    name: c
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: env
            operator: In
            values:
            - dev
            - test
