scripts/scheduler/05_scheduler_pod_affinity_base.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-base1
  labels:
    app: busybox
spec:
  containers:
  - image: harbor.kubemsb.com/library/nginx-web:0.1
    name: busybox
  nodeName: worker1
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-base2
  labels:
    app: busybox
spec:
  containers:
  - image: harbor.kubemsb.com/library/nginx-web:0.1
    name: busybox
  nodeSelector:
    kubernetes.io/hostname: worker2
