scripts/scheduler/06_scheduler_pod_affinity_required.yaml
# Pod的软亲和
apiVersion: v1
kind: Pod
metadata:
  name: pod-affinity-required
  namespace: default
spec:
  containers:
  - name: c
    image: harbor.kubemsb.com/library/nginx-web:0.1
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector: 
            matchLabels:
              env: test
        namespaceSelector: {}
        topologyKey: kubernetes.io/hostname
