scripts/scheduler/09_scheduler_pod_tolerations.yaml
# 给worker1添加污点node-type=prod:NoSchedule
# 给worker1添加标签env=dev
# 创建一个pod并设置nodeSelector为env=dev，由于存在污点，Pod调度正常会处于Pending
# 这里设置了容忍度，所以Pod依然还是会被调度
apiVersion: v1
kind: Pod
metadata:
  name: pod-tolerations
spec:
  containers:
  - name: c
    image: harbor.kubemsb.com/library/nginx-web:0.1
  nodeSelector:
    env: dev
  tolerations:
  - effect: NoSchedule
    key: node-type
    operator: Equal
    value: prod
