scripts/scheduler/10_scheduler_ingress_nginx_deploy_base.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-ingress-nginx-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-nginx-web
  template:
    metadata:
      labels:
        app: ingress-nginx-web
    spec:
      containers:
      - name: c
        image: harbor.kubemsb.com/library/nginx-web:0.1

---
apiVersion: v1
kind: Service
metadata:
  name: svc-ingress-nginx-web
spec:
  type: ClusterIP
  selector:
    app: ingress-nginx-web
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-ingress-tomcat-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-tomcat-web
  template:
    metadata:
      labels:
        app: ingress-tomcat-web
    spec:
      containers:
      - name: c
        image: harbor.kubemsb.com/library/tomcat-web:0.1

---
apiVersion: v1
kind: Service
metadata:
  name: svc-ingress-tomcat-web
spec:
  type: ClusterIP
  selector:
    app: ingress-tomcat-web
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
