scripts/scheduler/15_scheduler_ingress_tls_forward.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: www.k8slocal.com
    http:
      paths:
      - path: /dashboard(/|$)(.*)
        pathType: Prefix 
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
